# ic-rand

./: Cargo.toml  README.md
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/ic-rand/: index.js  service.did  service.did.d.ts  service.did.js
src/: lib.rs
