[package]
name = "ic-rand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
block-id = "0.2.1"
candid = "0.8.4"
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = "0.8.1"
ic-cdk-timers = "0.2.0"
rand = { version = "0.8.5", features = ["getrandom"]}
uuid = { version = "1.3.3", features = ["v4"] }